manifests/paradoxfox.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paradoxfox
---
apiVersion: v1
kind: Service
metadata:
  name: paradoxfox
  namespace: paradoxfox
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 443
    name: web
  selector:
    app: paradoxfox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paradoxfox
  namespace: paradoxfox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paradoxfox
  template:
    metadata:
      labels:
        app: paradoxfox
    spec:
      imagePullSecrets:
        - name: docker-config
      containers:
      - name: web
        image: docker.cluster.fun/private/paradoxfox:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
          name: web
        resources:
          limits:
            memory: 200Mi
          requests:
            memory: 200Mi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: paradoxfox
  namespace: paradoxfox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - paradoxfox.space
    secretName: paradoxfox-ingress
  rules:
  - host: paradoxfox.space
    http:
      paths:
      - path: /
        backend:
          serviceName: paradoxfox
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: paradoxfox-www
  namespace: paradoxfox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - www.paradoxfox.space
    secretName: paradoxfox-www-ingress
  rules:
  - host: www.paradoxfox.space
    http:
      paths:
      - path: /
        backend:
          serviceName: paradoxfox
          servicePort: 80
